--- a/vignettes/fromOD2bikebus.Rmd
+++ b/vignettes/fromOD2bikebus.Rmd
@@ -1,14 +1,19 @@
 ---
 title: "From Origin-Destination Data to Bike Bus Routes"
+author: "Robin Lovelace"
+output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{fromOD2bikebus}
-  %\VignetteEngine{quarto::html}
+  %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
-knitr:
-  opts_chunk:
-    collapse: true
-    comment: '#>'
 ---
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>"
+)
+```
 
 ```{r}
 #| eval: true
@@ -21,10 +26,7 @@ This vignette demonstrates the complete workflow for generating bike bus routes 
 
 ## Setup
 
-```{r}
-#| label: setup
-#| message: false
-
+```{r setup, message = FALSE}
 # library(bicischools)
 library(sf)
 library(tidyverse)
@@ -47,8 +49,7 @@ The workflow consists of several key steps:
 
 We'll use census zones (BGRI) as origins and schools as destinations. First, let's load the included sample data:
 
-```{r}
-#| label: load-data
+```{r load-data}
 # Load sample data included with the package
 data("origins_almada")
 data("schools_lisbon")
@@ -63,8 +64,7 @@ cat("Number of OD pairs:", nrow(od_data_almada), "\n")
 
 Let's visualise the basic geography:
 
-```{r}
-#| label: basic-map
+```{r basic-map}
 tm_shape(origins_almada) +
     tm_borders() +
     tm_shape(schools_lisbon) +
@@ -76,10 +76,7 @@ tm_shape(origins_almada) +
 
 For this example, we'll use pre-calculated OD data, but here's how you would generate it using a gravity model:
 
-```{r}
-#| label: gravity-model
-#| eval: false
-
+```{r gravity-model, eval = FALSE}
 # Example gravity model simulation (not run with sample data)
 results <- sim_schools(
     origins = origins_almada,
@@ -100,8 +97,7 @@ results <- sim_schools(
 
 Generate cycling routes between origins and the selected school:
 
-```{r}
-#| label: routes
+```{r routes}
 # The routes are already generated in our sample data
 # Here's how you would generate them:
 # routes_almada <- bici_routes(od_data_almada, distance.threshold = 5e3)
@@ -122,8 +118,7 @@ tm_shape(origins_almada) +
 
 Calculate potential cycling uptake using Propensity to Cycle Tool ([PCT](https://github.com/itsleeds/pct)) models and create a route network:
 
-```{r}
-#| label: uptake-network
+```{r uptake-network}
 # Calculate cycling uptake potential
 routes_uptake <- routes_pct_uptake(routes_almada)
 
@@ -139,8 +134,7 @@ cat("Network segments:", nrow(rnet), "\n")
 
 Visualise the network with cycling potential:
 
-```{r}
-#| label: network-map
+```{r network-map}
 tm_shape(rnet) +
     tm_lines(
         col = "bicycle_godutch",
@@ -157,8 +151,7 @@ tm_shape(rnet) +
 
 Identify optimal bike bus routes using the route bundling algorithm:
 
-```{r}
-#| label: bike-bus-routes
+```{r bike-bus-routes}
 # Generate ordered bike bus routes
 ordered_routes <- cycle_bus_routes(
     routes_summaries,
@@ -186,8 +179,7 @@ cat("Top priority routes:", nrow(top_routes), "\n")
 
 Match student origins to the top bike bus routes:
 
-```{r}
-#| label: centroid-matching
+```{r centroid-matching}
 # Match centroids to bike bus routes
 centroids <- match_centroids(
     routes_cents = ordered_routes,
@@ -209,8 +201,7 @@ cat("Students assigned to bike bus routes:", nrow(centroids), "\n")
 
 Create a comprehensive map showing the final bike bus network:
 
-```{r}
-#| label: final-map
+```{r final-map}
 # Create final visualisation
 tm_shape(origins_almada) +
     tm_borders(col_alpha = 0.2) +
@@ -233,6 +224,3 @@ tm_shape(origins_almada) +
     tm_dots(col = "red", size = 0.5, shape = 17) +
     tm_title("Optimised Bike Bus Routes for School Travel")
 ```
-
-
-
