--- a/vignettes/fromOD2bikebus.Rmd
+++ b/vignettes/fromOD2bikebus.Rmd
@@ -3,7 +3,7 @@ title: "From Origin-Destination Data to Bike Bus Routes"
 author: "Juan Pablo Fonseca Zamora, Joey Talbot and Robin Lovelace"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{fromOD2bikebus}
+  %\VignetteIndexEntry{From Origin-Destination Data to Bike Bus Routes}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 ```
 
 ```{r}
-#| eval: true
+#| eval: false
 #| include: false
 
 devtools::load_all()
@@ -27,11 +27,11 @@ This vignette demonstrates the complete workflow for generating bike bus routes 
 ## Setup
 
 ```{r setup, message = FALSE}
-# library(bicischools)
+library(bicischools)
 library(sf)
 library(tidyverse)
 library(tmap)
-# tmap_mode("view")
+tmap_mode("view")
 ```
 
 ## Overview
@@ -207,20 +207,20 @@ tm_shape(origins_almada) +
     tm_borders(col_alpha = 0.2) +
     tm_shape(centroids) +
     tm_bubbles(
-        col = "pick",
+        fill = "pick",
         size = "bicycle_godutch",
-        palette = "Set1",
-        title.col = "Bike Bus Route",
-        title.size = "Potential Cyclists"
+        fill.scale = tm_scale_categorical(values = "brewer.set1"),
+        fill.legend = tm_legend_hide(),
+        size.legend = tm_legend(title = "Potential Cyclists")
     ) +
     tm_shape(top_routes %>% mutate(route_id = as.character(row_number()))) +
     tm_lines(
         col = "route_id",
-        palette = "Set1",
+        col.scale = tm_scale_categorical(values = "brewer.set1"),
         lwd = 4,
-        title.col = "Bike Bus Routes"
+        col.legend = tm_legend(title = "Bike Bus Routes")
     ) +
     tm_shape(schools_lisbon) +
-    tm_dots(col = "red", size = 0.5, shape = 17) +
+    tm_dots(size = 0.5, shape = 17) +
     tm_title("Optimised Bike Bus Routes for School Travel")
 ```
