--- a/vignettes/manchester.Rmd
+++ b/vignettes/manchester.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "manchester"
+title: "A Manchester case study"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{manchester}
@@ -34,12 +34,11 @@ First we define a catchment area for the school, based on local knowledge of whe
 ```{r}
 ## code to prepare `example_school_mcr` dataset goes here
 
-
 # Rough catchment for Manley Park Primary School
 zones = zonebuilder::zb_zone(
-    "Whalley Range Sure Start Centre",
-    n_circles = 2,
-    distance = 0.5
+  "Whalley Range Sure Start Centre",
+  n_circles = 2,
+  distance = 0.5
 )
 
 study_area = sf::st_union(zones)
@@ -51,9 +50,9 @@ We get speed limits for the local road network.
 
 ```{r}
 osm_data = osmactive::get_travel_network(
-    place = study_area,
-    boundary = study_area,
-    boundary_type = "clipsrc"
+  place = study_area,
+  boundary = study_area,
+  boundary_type = "clipsrc"
 )
 
 osm_drive = osmactive::get_driving_network(osm_data)
@@ -68,13 +67,16 @@ We can now estimate cycle Level of Service across the local road network, based 
 
 cycle_net = osmactive::get_cycling_network(osm_data)
 cycle_net = distance_to_road(cycle_net, osm_drive)
-cycle_net = classify_cycle_infrastructure(cycle_net, include_mixed_traffic = TRUE)
+cycle_net = classify_cycle_infrastructure(
+  cycle_net,
+  include_mixed_traffic = TRUE
+)
 
 cycle_net = estimate_traffic(cycle_net)
 cycle_net$AADT = npt_to_cbd_aadt_numeric(cycle_net$assumed_volume)
 cycle_net = level_of_service(cycle_net)
 plot(cycle_net["Level of Service"])
-mapview::mapview(cycle_net["Level of Service"])
+mapview::mapview(cycle_net, z = "Level of Service")
 ```
 
 After some data cleaning, student home locations are randomly chosen within the defined school catchment.
@@ -92,17 +94,19 @@ cycle_net_cols_to_keep = c(
   "segregated",
   "surface"
 )
-cycle_net = cycle_net |> 
+cycle_net = cycle_net |>
   select(all_of(cycle_net_cols_to_keep))
 
 # usethis::use_data(example_school_mcr, overwrite = TRUE)
 
 # Create random home locations within the zonebuilder area
 cycle_net_joined = sf::st_union(cycle_net)
-points = sf::st_sample(cycle_net_joined, size = 1000)
+
+points = sf::st_sample(cycle_net_joined, size = 500, )
 
 points = st_as_sf(points)
-points = points |> 
+
+points = points |>
   filter(!st_is_empty(points))
 points_single = points |> 
   sf::st_cast("POINT")
@@ -110,14 +114,17 @@ points = points_single
 
 centre = sf::st_centroid(zones)[1,]
 
-tm_shape(cycle_net_joined) + tm_lines() +
-  tm_shape(points) + tm_dots(size = 1) +
-  tm_shape(centre) + tm_dots(size = 2)
+origins <- points |> rowid_to_column("id")
+
+tm_shape(cycle_net_joined) +
+  tm_lines() +
+  tm_shape(points) +
+  tm_dots(size = 1) +
+  tm_shape(centre) +
+  tm_dots(size = 2)
 ```
 
 We extract the number of students at the school from a national schools dataset.
-<!-- GIAS: (get information about schools) -->
-<!-- https://get-information-schools.service.gov.uk/Downloads/Generated/d74b2009-5571-496b-b102-c08765cb62f6 -->
 
 ```{r}
 # Get number of students
@@ -155,68 +162,42 @@ od = od |>
   mutate(
     desire_line_length = units::drop_units(st_length(geometry))
   )
-od = od |> 
+od = od |>
   filter(desire_line_length < 5000)
 
-od = od |> 
-  mutate(trips = nrow(od)/n)
+od = od |>
+  mutate(trips = nrow(od) / n)
 
 # Fix the geometry
-od_standard = od |> 
-  st_drop_geometry() |> 
-  mutate(id = row_number()) |> 
+od_standard = od |>
+  st_drop_geometry() |>
+  mutate(id = row_number()) |>
   select(id, trips, desire_line_length, geometry)
-od_standard = st_as_sf(od_standard)
+od_standard = st_as_sf(od_standard) |>
+  mutate(destination = "d") |>
+  rename(origin = id) |>
+  relocate(origin, destination)
 
 # The desire lines still look strange!
-tm_shape(od_standard) + tm_lines()
+tm_shape(od_standard) + tm_lines(lwd = "trips",col_alpha = 0.5)
 ```
 
 We convert the desire lines into routes
 
-```{r}
+```{r,  eval = FALSE}
 # Generate routes to school from these points
 # Create routes
 
-od_standard = od_standard |> 
-  mutate(origin = id,
-         destination = "d")
+routes_quiet <- bici_routes(
+  od.data =   od_standard,
+  distance.threshold = 5e3)
 
-routes = bici_routes(od.data = od_standard,
-                     origin.col = "origin",
-                     destination.col = "destination",
-                     distance.threshold = 3000
-                     )
+saveRDS(routes_quiet, paste0("./data-raw/routes-manchester.Rds"))
 
-# plan = "quietest"
-# 
-# routes_plan = stplanr::route(
-#   l = od_standard,
-#   route_fun = cyclestreets::journey,
-#   plan = plan
-# )
-# tm_shape(routes_plan) + tm_lines("trips")
-# 
-# routes = routes_plan |>
-#   group_by(route_number) |>
-#   mutate(route_hilliness = weighted.mean(gradient_smooth, distances)) |>
-#   ungroup()
-# class(routes$route_number) = "character"
-# class(routes$length) = "numeric"
-# class(routes$quietness) = "numeric"
-# assign("routes_all", routes)
-# routes = routes |>
-#   filter(length < 5000)
-saveRDS(routes, paste0("./data-raw/routes-manchester.Rds"))
+```
 
-route_summaries = routes_all |>
-  group_by(route_number) |>
-  summarise(
-    trips = mean(trips),
-    length = mean(length),
-    desire_line_length = mean(desire_line_length)
-  )
-assign("route_summaries_all", route_summaries)
+```{r, include = FALSE }
+routes_quiet <- readRDS("./data-raw/routes-manchester.Rds")
 ```
 
 Using the PCT Go Dutch scenario we estimate potential cycle uptake under Dutch-style cycling levels.
@@ -225,32 +206,11 @@ We then convert the routes to school into a route network.
 
 ```{r}
 # Rnet and PCT uptake
-routes_pct = routes |>
-  group_by(route_number) |>
-  mutate(
-    pcycle_godutch = pct::uptake_pct_godutch_school2(
-      case_when(length > 30000 ~ 30000, TRUE ~ length),
-      route_hilliness
-    ),
-    bicycle_godutch = pcycle_godutch * trips
-  )
-rnet_raw = routes_pct |>
-  overline(
-    attrib = c(
-      "trips",
-      "bicycle_godutch",
-      "quietness",
-      "gradient_smooth"
-    ),
-    fun = list(sum = sum, mean = mean)
-  )
-rnet = rnet_raw |>
-  transmute(
-    trips = trips_sum,
-    bicycle_godutch = bicycle_godutch_sum,
-    quietness = round(quietness_mean),
-    gradient = round(gradient_smooth_mean * 100)
-  )
+
+routes_quiet_pct <- routes_pct_uptake(routes = routes_quiet)
+
+rnet_quiet <- routes_network(routes = routes_quiet_pct)
+
 
 # tm_shape(rnet_quietest) +
 #   tm_lines(
@@ -267,86 +227,69 @@ rnet = rnet_raw |>
 quietness_breaks = c(0, 25, 50, 75, 100)
 pal = c('#882255', '#CC6677', '#44AA99', '#117733')
 
-route_summaries = routes_pct |>
-  group_by(id, route_number, trips, bicycle_godutch, length) |>
-  summarise() |>
-  ungroup()
-```
+route_summaries_quiet <- summarise_routes(routes_quiet_pct,
+  origin.col = "origin",
+  destination.col = "destination"
+)
 
-We order the routes to find which can benefit the greatest number of students
-
-```{r}
-# First function by Juan 
-ordered_routes = cycle_bus_routes(
-  routes = route_summaries,
-  rnet = rnet,
+ordered_routes_quiet = cycle_bus_routes(
+  routes = route_summaries_quiet,
+  rnet = rnet_quiet,
   min_trips = 3,
   buffer = 10,
   attribute_trips = "bicycle_godutch"
-  )
+)
 
 tmap_mode("view")
-tm_shape(ordered_routes) + tm_lines()
+tm_shape(ordered_routes_quiet) + tm_lines()
 
-route_stats = calc_stats(
-  routes = route_summaries,
-  rnet_plan = rnet, 
-  ordered_routes = ordered_routes,
+```
+
+
+```{r}
+route_stats_quiet = calc_stats(
+  routes = route_summaries_quiet ,
+  rnet_plan = rnet_quiet,
+  ordered_routes = ordered_routes_quiet,
   attribute_trips = "bicycle_godutch",
   min_trips = 3
 )
-
-# buffer = 10
-# attribute_trips = "bicycle_godutch"
-# min_trips = 3
-# 
-# rnet_subset = rnet[rnet[[attribute_trips]] > min_trips, ]
-# rnet_subset$length = sf::st_length(rnet_subset) |>
-#   as.numeric()
-# rnet_union = sf::st_union(rnet_subset)
-# rnet_buffer = geo_buffer(rnet_union, dist = buffer)
-# routes_crop = sf::st_intersection(route_summaries, rnet_buffer)
-# 
-# join = sf::st_join(routes_crop, ordered_routes, join = st_equals)
-# route_stats = join |>
-#   mutate(
-#     full_length = length.x,
-#     bike_bus_length = length.y,
-#     dist_to_bike_bus = length.x - length.y
-#   ) |>
-#   select(-length.x, -length.y)
 ```
 
-Remove routes with start points too close to other higher ranked routes
+```{r}
+top_routes_quiet = filter_routes(
+  routes = ordered_routes_quiet,
+  buffer = 300,
+  top_n = 3
+)
+
+tm_shape(top_routes_quiet)+tm_lines()
+
+```
+
 
 ```{r}
-selected_routes = nrow(routes)
-
-# this is slow
-top_routes = filter_routes(
-  routes = ordered_routes,
-  )
-
-tm_shape(top_routes) +
-  tm_lines() +
-  tm_shape(points) +
-  tm_bubbles()
-
-routes_cents = ordered_routes
-points = points |> 
-  mutate(id = seq.int(nrow(points)))
-
-# Not working yet:
-cents_quiet = match_centroids(
-  routes_cents = routes_cents,
-  top_routes = top_routes,
-  route_stats = route_stats,
-  origins = points,
-  origin.id = "id",
-  origin_route.id = "O",
-  id.col = "id",
-  max_dist_to_bikebus = 30,
+cents_quiet <- match_centroids(
+  routes_cents = ordered_routes_quiet,
+  top_routes = top_routes_quiet,
+  route_stats = route_stats_quiet,
+  origins = origins,
+  max_dist_to_bikebus = 200,
   min_dist_threshold = 500,
-  attribute_trips = c("bicycle_godutch", "quietness", "gradient_smooth")
+  id.col = "id",
+  origin.id = "id",
+  origin_route.id = "origin",
+  attribute_trips = "bicycle_godutch"
 )
+```
+
+
+```{r}
+tm_shape(centre) +
+  tm_dots(size = 2)+
+# tm_shape(cents_quiet) +
+#   tm_dots("pick") +
+  tm_shape(top_routes_quiet |>
+   mutate(id = factor(id))) +
+  tm_lines("id")
 ```
